--- a/cv-site/style.css
+++ b/cv-site/style.css
@@ -56,7 +56,7 @@ h2 {
 .galerie img {
   width: 100%;
   max-width: 900px;
-  height: 1000px;
+  height: auto;
   border-radius: 8px;
   margin-bottom: 15px;
   transition: transform 0.2s ease-in-out; /* Adaugă tranziție pentru un efect mai plăcut */
